libmeegotouch (0.20.80~1) unstable; urgency=low

  * unreleased
  * Fixes: NB#220305 - binary CSS files should be mmaped
  * Fixes: NB#199539 - Theme CSS loading takes 0.6MB memory even for minimal MTF application

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 01 Feb 2011 12:51:38 +0200

libmeegotouch (0.20.79-1) unstable; urgency=low

  * New version
  * Fixes: NB#214271 - MContainer header spinner is black in dark gray background.
  * Fixes: NB#223804 - Unable to swipe the launcher screen to get Recent Apps and Notification Screens.

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 01 Feb 2011 12:46:46 +0200

libmeegotouch (0.20.78-1) unstable; urgency=low

  * New version
  * Fixes: NB#208915 - Navigation bar styling doesn't work if first page doesn't have navigation bar and invoker is used
  * Fixes: NB#222807 - [TASK] mthemedaemon should use the meego graphicssystem
  * Fixes: NB#219895
  * Fixes: NB#217075 - List/view panning always starts with a jump
  * Fixes: NB#214528 - MLabel does not render text in certain cases if in richtext mode.
  * Fixes: Build break on Mac without ICU.
  * Fixes: NB#206906 MList filter stops responding in widgetsgallery list page
  * Fixes: NB#217234 - [TASK] Calling MLocale::formatDateTime() generates 98 stat64() calls to files that do not ever exist
  * Fixes: NB#206357 - Calling MLocale::formatDateTime() takes over 7msec
  * Fixes: NB#208977, Time and date always in Hindi numbers and does not affected for the numeric system (Hindi-Latin) changing in Arabic language
  * Fixes: NB#220587 - WM_CLASS window property not set by MComponentCache::mApplicationWindow
  * Fixes: Arguments list is accessed in themedaemon before the QCoreApplication instance is created.

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 31 Jan 2011 15:57:23 +0200

libmeegotouch (0.20.77-1) unstable; urgency=low

  * Fixes: NB#206584 - MAbstractItemModel was returning an invalid parent index
  * Fixes: NB#219747